# imgthin-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/sheng-hsing/: Cargo.toml
examples/sheng-hsing/src/: main.rs
examples/zhang-suen/: Cargo.toml
examples/zhang-suen/src/: main.rs
src/: bin_image.rs  common.rs  default.rs  lib.rs  main.rs  ysc_whh.rs
test_data/: b_char.txt  b_char_improved_thinned.txt  b_char_thinned.txt  mapping_table_1_expect.txt  mapping_table_2_expect.txt  test_get_neighbors.txt  test_sub.txt  test_subiter.txt
